fix: toast shadow was clipped

--- a/src/App/styles.less
+++ b/src/App/styles.less
@@ -201,7 +201,8 @@ html {
         body {
             :global(#app) {
                 .toasts-container {
-                    padding: 0 1rem;
+                    padding: 3rem;
+                    margin: -3rem;
                 }
 
                 .tooltip-container {
